load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_cc//cc:defs.bzl", "cc_test")


cc_library(
    name = "euler_helpers_lib",
    hdrs = [
        "Euler_Helpers/big_int.h",
        "Euler_Helpers/chunked_prime_helper.h",
        "Euler_Helpers/combinatorics.h",
        "Euler_Helpers/continued_fractions.h",
        "Euler_Helpers/fraction.h",
        "Euler_Helpers/prime_helper.h",
        "Euler_Helpers/totient.h"
    ],
    srcs = [
        "Euler_Helpers/big_int.cpp",
        "Euler_Helpers/combinatorics.cpp",
        "Euler_Helpers/continued_fractions.cpp",
        "Euler_Helpers/fraction.cpp",
        "Euler_Helpers/prime_helper.cpp",
        "Euler_Helpers/totient.cpp"
    ],
    includes = [
        "./Euler_Helpers/"
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "helper_tests",
    srcs = [
        "Helper_Tests/big_int_tests.cpp",
        "Helper_Tests/combinatorics_tests.cpp",
        "Helper_Tests/test_main.cpp",
    ],
    deps = [
        ":euler_helpers_lib",
        "@com_google_googletest//:gtest",
    ],
)

cc_binary(
    name = "pe1",
    srcs = [
        "ProjectEuler0001/ProjectEuler0001.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe2",
    srcs = [
        "ProjectEuler0002/ProjectEuler0002.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe3",
    srcs = [
        "ProjectEuler0003/ProjectEuler0003.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
        # what?
    ],
)

cc_binary(
    name = "pe4",
    srcs = [
        "ProjectEuler0004/ProjectEuler0004.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe5",
    srcs = [
        "ProjectEuler0005/ProjectEuler0005.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe6",
    srcs = [
        "ProjectEuler0006/ProjectEuler0006.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe7",
    srcs = [
        "ProjectEuler0007/ProjectEuler0007.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe8",
    srcs = [
        "ProjectEuler0008/ProjectEuler0008.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe9",
    srcs = [
        "ProjectEuler0009/ProjectEuler0009.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe10",
    srcs = [
        "ProjectEuler0010/ProjectEuler0010.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe11",
    srcs = [
        "ProjectEuler0011/ProjectEuler0011.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe12",
    srcs = [
        "ProjectEuler0012/ProjectEuler0012.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe13",
    srcs = [
        "ProjectEuler0013/ProjectEuler0013.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe14",
    srcs = [
        "ProjectEuler0014/ProjectEuler0014.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe15",
    srcs = [
        "ProjectEuler0015/ProjectEuler0015.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe16",
    srcs = [
        "ProjectEuler0016/ProjectEuler0016.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe17",
    srcs = [
        "ProjectEuler0017/ProjectEuler0017.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe18",
    srcs = [
        "ProjectEuler0018/ProjectEuler0018.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe19",
    srcs = [
        "ProjectEuler0019/ProjectEuler0019.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe20",
    srcs = [
        "ProjectEuler0020/ProjectEuler0020.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe21",
    srcs = [
        "ProjectEuler0021/ProjectEuler0021.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe22",
    srcs = [
        "ProjectEuler0022/ProjectEuler0022.cpp"
    ],
    data = [
        "ProjectEuler0022/p022_names.txt"
    ],
    deps = [
        # what?
    ],
)

cc_binary(
    name = "pe23",
    srcs = [
        "ProjectEuler0023/ProjectEuler0023.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe24",
    srcs = [
        "ProjectEuler0024/ProjectEuler0024.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe25",
    srcs = [
        "ProjectEuler0025/ProjectEuler0025.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe26",
    srcs = [
        "ProjectEuler0026/ProjectEuler0026.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe27",
    srcs = [
        "ProjectEuler0027/ProjectEuler0027.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe28",
    srcs = [
        "ProjectEuler0028/ProjectEuler0028.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe29",
    srcs = [
        "ProjectEuler0029/ProjectEuler0029.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe30",
    srcs = [
        "ProjectEuler0030/ProjectEuler0030.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe31",
    srcs = [
        "ProjectEuler0031/ProjectEuler0031.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe32",
    srcs = [
        "ProjectEuler0032/ProjectEuler0032.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe33",
    srcs = [
        "ProjectEuler0033/ProjectEuler0033.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe34",
    srcs = [
        "ProjectEuler0034/ProjectEuler0034.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe35",
    srcs = [
        "ProjectEuler0035/ProjectEuler0035.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe36",
    srcs = [
        "ProjectEuler0036/ProjectEuler0036.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe37",
    srcs = [
        "ProjectEuler0037/ProjectEuler0037.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe38",
    srcs = [
        "ProjectEuler0038/ProjectEuler0038.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe39",
    srcs = [
        "ProjectEuler0039/ProjectEuler0039.cpp"
    ],
    deps = [
        # what?
    ],
)

cc_binary(
    name = "pe40",
    srcs = [
        "ProjectEuler0040/ProjectEuler0040.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe41",
    srcs = [
        "ProjectEuler0041/ProjectEuler0041.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe42",
    srcs = [
        "ProjectEuler0042/ProjectEuler0042.cpp"
    ],
    data = [
        "ProjectEuler0042/p042_words.txt"
    ],
    deps = [
        # what?
    ],
)

cc_binary(
    name = "pe43",
    srcs = [
        "ProjectEuler0043/ProjectEuler0043.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe44",
    srcs = [
        "ProjectEuler0044/ProjectEuler0044.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe45",
    srcs = [
        "ProjectEuler0045/ProjectEuler0045.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe46",
    srcs = [
        "ProjectEuler0046/ProjectEuler0046.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe47",
    srcs = [
        "ProjectEuler0047/ProjectEuler0047.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe48",
    srcs = [
        "ProjectEuler0048/ProjectEuler0048.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe49",
    srcs = [
        "ProjectEuler0049/ProjectEuler0049.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe50",
    srcs = [
        "ProjectEuler0050/ProjectEuler0050.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe51",
    srcs = [
        "ProjectEuler0051/ProjectEuler0051.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe52",
    srcs = [
        "ProjectEuler0052/ProjectEuler0052.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe53",
    srcs = [
        "ProjectEuler0053/ProjectEuler0053.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe54",
    srcs = [
        "ProjectEuler0054/ProjectEuler0054.cpp"
    ],
    data = [
        "ProjectEuler0054/p054_poker.txt"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe55",
    srcs = [
        "ProjectEuler0055/ProjectEuler0055.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe56",
    srcs = [
        "ProjectEuler0056/ProjectEuler0056.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe57",
    srcs = [
        "ProjectEuler0057/ProjectEuler0057.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe58",
    srcs = [
        "ProjectEuler0058/ProjectEuler0058.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe59",
    srcs = [
        "ProjectEuler0059/ProjectEuler0059.cpp"
    ],
    data = [
        "ProjectEuler0059/p059_cipher.txt"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe60",
    srcs = [
        "ProjectEuler0060/ProjectEuler0060.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe61",
    srcs = [
        "ProjectEuler0061/ProjectEuler0061.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe62",
    srcs = [
        "ProjectEuler0062/ProjectEuler0062.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe63",
    srcs = [
        "ProjectEuler0063/ProjectEuler0063.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe64",
    srcs = [
        "ProjectEuler0064/ProjectEuler0064.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe65",
    srcs = [
        "ProjectEuler0065/ProjectEuler0065.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe66",
    srcs = [
        "ProjectEuler0066/ProjectEuler0066.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe67",
    srcs = [
        "ProjectEuler0067/ProjectEuler0067.cpp"
    ],
    data = [
        "ProjectEuler0067/p067_triangle.txt"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe68",
    srcs = [
        "ProjectEuler0068/ProjectEuler0068.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe69",
    srcs = [
        "ProjectEuler0069/ProjectEuler0069.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
    linkopts = ["-pthread"],
)

cc_binary(
    name = "pe70",
    srcs = [
        "ProjectEuler0070/ProjectEuler0070.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe71",
    srcs = [
        "ProjectEuler0071/ProjectEuler0071.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe72",
    srcs = [
        "ProjectEuler0072/ProjectEuler0072.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe73",
    srcs = [
        "ProjectEuler0073/ProjectEuler0073.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe74",
    srcs = [
        "ProjectEuler0074/ProjectEuler0074.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe75",
    srcs = [
        "ProjectEuler0075/ProjectEuler0075.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe76",
    srcs = [
        "ProjectEuler0076/ProjectEuler0076.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe77",
    srcs = [
        "ProjectEuler0077/ProjectEuler0077.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe78",
    srcs = [
        "ProjectEuler0078/ProjectEuler0078.cpp"
    ],
    deps = [
    ],
    linkopts = ["-pthread"],
)

cc_binary(
    name = "pe79",
    srcs = [
        "ProjectEuler0079/ProjectEuler0079.cpp"
    ],
    data = [
        "ProjectEuler0079/p079_keylog.txt"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe80",
    srcs = [
        "ProjectEuler0080/ProjectEuler0080.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe81",
    srcs = [
        "ProjectEuler0081/ProjectEuler0081.cpp"
    ],
    data = [
        "ProjectEuler0081/p081_matrix.txt"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe82",
    srcs = [
        "ProjectEuler0082/ProjectEuler0082.cpp"
    ],
    data = [
        "ProjectEuler0082/p082_matrix.txt"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe83",
    srcs = [
        "ProjectEuler0083/ProjectEuler0083.cpp"
    ],
    data = [
        "ProjectEuler0083/p083_matrix.txt"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe84",
    srcs = [
        "ProjectEuler0084/ProjectEuler0084.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe85",
    srcs = [
        "ProjectEuler0085/ProjectEuler0085.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe86",
    srcs = [
        "ProjectEuler0086/ProjectEuler0086.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe87",
    srcs = [
        "ProjectEuler0087/ProjectEuler0087.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe88",
    srcs = [
        "ProjectEuler0088/ProjectEuler0088.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe89",
    srcs = [
        "ProjectEuler0089/ProjectEuler0089.cpp"
    ],
    data = [
        "ProjectEuler0089/p089_roman.txt"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe90",
    srcs = [
        "ProjectEuler0090/ProjectEuler0090.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe91",
    srcs = [
        "ProjectEuler0091/ProjectEuler0091.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe92",
    srcs = [
        "ProjectEuler0092/ProjectEuler0092.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe93",
    srcs = [
        "ProjectEuler0093/ProjectEuler0093.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe94",
    srcs = [
        "ProjectEuler0094/ProjectEuler0094.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe95",
    srcs = [
        "ProjectEuler0095/ProjectEuler0095.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe96",
    srcs = [
        "ProjectEuler0096/ProjectEuler0096.cpp"
    ],
    data = [
        "ProjectEuler0096/p096_sudoku.txt"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe97",
    srcs = [
        "ProjectEuler0097/ProjectEuler0097.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe98",
    srcs = [
        "ProjectEuler0098/ProjectEuler0098.cpp"
    ],
    data = [
        "ProjectEuler0098/p098_words.txt"
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe99",
    srcs = [
        "ProjectEuler0099/ProjectEuler0099.cpp"
    ],
    data = [
        "ProjectEuler0099/p099_base_exp.txt"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe100",
    srcs = [
        "ProjectEuler0100/ProjectEuler0100.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe101",
    srcs = [
        "ProjectEuler0101/ProjectEuler0101.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe102",
    srcs = [
        "ProjectEuler0102/ProjectEuler0102.cpp"
    ],
    data = [
        "ProjectEuler0102/p102_triangles.txt"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe103",
    srcs = [
        "ProjectEuler0103/ProjectEuler0103.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe104",
    srcs = [
        "ProjectEuler0104/ProjectEuler0104.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe105",
    srcs = [
        "ProjectEuler0105/ProjectEuler0105.cpp"
    ],
    data = [
        "ProjectEuler0105/p105_sets.txt"
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe106",
    srcs = [
        "ProjectEuler0106/ProjectEuler0106.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe107",
    srcs = [
        "ProjectEuler0107/ProjectEuler0107.cpp"
    ],
    data = [
        "ProjectEuler0107/p107_network.txt"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe108",
    srcs = [
        "ProjectEuler0108/ProjectEuler0108.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe109",
    srcs = [
        "ProjectEuler0109/ProjectEuler0109.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe110",
    srcs = [
        "ProjectEuler0110/ProjectEuler0110.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe111",
    srcs = [
        "ProjectEuler0111/ProjectEuler0111.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe112",
    srcs = [
        "ProjectEuler0112/ProjectEuler0112.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe113",
    srcs = [
        "ProjectEuler0113/ProjectEuler0113.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe114",
    srcs = [
        "ProjectEuler0114/ProjectEuler0114.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe115",
    srcs = [
        "ProjectEuler0115/ProjectEuler0115.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe116",
    srcs = [
        "ProjectEuler0116/ProjectEuler0116.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe117",
    srcs = [
        "ProjectEuler0117/ProjectEuler0117.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe118",
    srcs = [
        "ProjectEuler0118/ProjectEuler0118.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe119",
    srcs = [
        "ProjectEuler0119/ProjectEuler0119.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe120",
    srcs = [
        "ProjectEuler0120/ProjectEuler0120.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe121",
    srcs = [
        "ProjectEuler0121/ProjectEuler0121.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe122",
    srcs = [
        "ProjectEuler0122/ProjectEuler0122.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe123",
    srcs = [
        "ProjectEuler0123/ProjectEuler0123.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe124",
    srcs = [
        "ProjectEuler0124/ProjectEuler0124.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe125",
    srcs = [
        "ProjectEuler0125/ProjectEuler0125.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe126",
    srcs = [
        "ProjectEuler0126/ProjectEuler0126.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe127",
    srcs = [
        "ProjectEuler0127/ProjectEuler0127.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe128",
    srcs = [
        "ProjectEuler0128/ProjectEuler0128.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe129",
    srcs = [
        "ProjectEuler0129/ProjectEuler0129.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe130",
    srcs = [
        "ProjectEuler0130/ProjectEuler0130.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe131",
    srcs = [
        "ProjectEuler0131/ProjectEuler0131.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe132",
    srcs = [
        "ProjectEuler0132/ProjectEuler0132.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe133",
    srcs = [
        "ProjectEuler0133/ProjectEuler0133.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe134",
    srcs = [
        "ProjectEuler0134/ProjectEuler0134.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe135",
    srcs = [
        "ProjectEuler0135/ProjectEuler0135.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe136",
    srcs = [
        "ProjectEuler0136/ProjectEuler0136.cpp"
    ],
    data = [
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe206",
    srcs = [
        "ProjectEuler0206/ProjectEuler0206.cpp"
    ],
    data = [
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe700",
    srcs = [
        "ProjectEuler0700/ProjectEuler0700.cpp"
    ],
    deps = [
        "euler_helpers_lib",
    ],
)

cc_binary(
    name = "pe700_helper",
    srcs = [
        "ProjectEuler0700/ProjectEuler0700_helper.cpp"
    ],
    deps = [
    ],
)

cc_binary(
    name = "pe752",
    srcs = [
        "ProjectEuler0752/ProjectEuler0752.cpp"
    ],
    deps = [
        ":euler_helpers_lib",
    ],
)
